# bark-agent-hook

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  tech_task.yml
.github/workflows/: ci.yml  release-pypi.yml
bark_agent_hook/: __init__.py  __main__.py  app.py  audit.py  cli.py  commands.py  constants.py  hook.py  install.py  installer.py  model_context.py  models.py  notification.py  output.py  runtime.py  settings.py  summary.py  utils.py
docs/: README.md
docs/decisions/: 2026-06-26-github-governance-audit.md  README.md
docs/design/: README.md
docs/postmortems/: README.md
docs/release/: README.md
docs/tech/: README.md
plugins/bark-agent-hook-claude/.claude-plugin/: plugin.json
plugins/bark-agent-hook-claude/hooks/: hooks.json
plugins/bark-agent-hook-codex/.codex-plugin/: plugin.json
plugins/bark-agent-hook-codex/hooks/: hooks.json
plugins/bark-agent-hook-openclaw/: README.md  index.js  index.ts  openclaw.plugin.json  package.json
scripts/: check_versions.py  sync_versions.py
tests/: agent_bark_hook_install_test.py  agent_bark_hook_test.py  cli_help_test.py  plugin_manifest_test.py
