[project]
name = "bark-agent-hook"
version = "0.1.9"
description = "Bark notification hooks for Codex, Claude Code, and OpenClaw agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "rich>=13.0",
    "typer>=0.12",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pre-commit>=4.5.1",
    "pytest>=9.1.1",
    "tomli>=2.0; python_version < '3.11'",
    "tox-uv>=1.16",
    "mypy>=1.19",
    "types-requests",
]

[project.scripts]
bark-agent-hook = "bark_agent_hook.cli:cmd"

[tool.hatch.build.targets.wheel]
packages = ["bark_agent_hook"]

[tool.hatch.build.targets.wheel.force-include]
"plugins/bark-agent-hook-openclaw" = "plugins/bark-agent-hook-openclaw"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 200
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ['^venv/', '^__init__\.py$']
explicit_package_bases = true

[tool.pytest.ini_options]
markers = []

[tool.isort]
profile = "hug"

[tool.tox]
requires = ["tox>=4.21", "tox-uv>=1.16"]
env_list = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.tox.env_run_base]
description = "run tests on Python {base_python}"
runner = "uv-venv-lock-runner"
dependency_groups = ["dev"]
commands = [["pytest", "-q"]]
